fixed empty link errors, color contrast, cc's in youtube videos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5451,6 +5451,13 @@ section,
   }
 }
 
+#testimonialCarousel .carousel-control-prev::before,
+#testimonialCarousel .carousel-control-next::before {
+  background-color: rgba(255,255,255,0.8);
+  background-color: white; /* or rgba(255,255,255,0.8) for semi‑opaque */
+  background-color: black;
+}
+
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
